left sidebar menu items disappearing on small screens fixed

--- a/WebClient/lama/src/app/components/main/main-page-header/main-page-header.component.sass
+++ b/WebClient/lama/src/app/components/main/main-page-header/main-page-header.component.sass
@@ -17,19 +17,22 @@ header
     justify-content: center
 
 .align-right a
-    margin: 1rem 
-    
+    margin: 1rem
+
 .align-left
     display: flex
     align-items: center
     flex-direction: row
     justify-content: flex-end
     margin: .6rem
+
 .input-form
     width: 70%
+
 .align-left img
     height: 100%
     width: auto
+
 .menu-icon a
     margin: 1rem
 
@@ -38,7 +41,6 @@ header
     align-items: center
     justify-items: center
     width: 65%
-
 
 .control .button
     border-radius: 0 4px 4px 0 !important
@@ -62,6 +64,7 @@ header
 .logo p
     font-weight: 500
     font-size: 2rem
+
 .field i
     margin-right: .5rem
 
@@ -70,20 +73,20 @@ header
 
 .profile img
     border-radius: 100%
-    
+    max-width: none
 
 @media screen and (max-width: 768px)
     .logo
         margin-left: 0rem
     .logo p
         display: none
-    
+
 @media screen and (max-width: 960px)
     .search-bar .field > a.button
         width: 3rem
     .search-bar .field > a.button p
         display: none
-        
+
     .search-bar .field > a i
         margin: 0
 
